# aptmatic

./: .pre-commit-config.yaml  Cargo.toml  README.md  REQUIREMENTS.md  justfile
.github/: renovate.json  renovate.json5
.github/workflows/: ci.yml  release.yml
src/: app.rs  apt.rs  cache.rs  config.rs  gather.rs  main.rs  ssh.rs  ui.rs
