[package]
name = "aptmatic"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
ssh2 = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
whoami = "1"
